# sims-solvers

./: .gitignore  pyproject.toml
model/mo/: MOWithFrontGenerator.py  main.py
model/mo/FrontGenerators/: CoverageGridPoint.py  FrontGeneratorStrategy.py  Gavanelli.py  Saugmecon.py
model/mo/Models/: SatelliteImageMosaicSelectionGeneralModel.py
model/mo/Models/GurobiModels/: SatelliteImageMosaicSelectionGurobiModel.py
model/mo/Solvers/: GurobiSolver.py  MinizincSolver.py  OrtoolsCPSolver.py  Solver.py
model/utils/: convert_input_to_int.py
sims_solvers/: Config.py  MO.py  MOCP.py  MOWithFrontGenerator.py  __init__.py  main.py  solve.py
sims_solvers/FrontGenerators/: AnejaNair.py  CoverageGridPoint.py  FrontGeneratorStrategy.py  Gavanelli.py  Saugmecon.py
sims_solvers/Instances/: InstanceMIPMatrix.py  InstanceMinizinc.py  InstanceSIMS.py
sims_solvers/Models/: MinizincPseudoModel.py  MultiobjectiveKnapsackGenericModel.py  SatelliteImageMosaicSelectionGeneralModel.py
sims_solvers/Models/GurobiModels/: GurobiModel.py  MultiobjectiveKnapsackGurobiModel.py  SatelliteImageMosaicSelectionGurobiModel.py
sims_solvers/Models/OrtoolsCPModels/: MultiobjectiveKnapsackOrtoolsCPModel.py  OrtoolsCPModel.py  SatelliteImageMosaicSelectionOrtoolsCPModel.py
sims_solvers/Solvers/: GurobiSolver.py  MinizincSolver.py  OrtoolsCPSolver.py  Solver.py
