[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sims-solvers"
version = "0.1.0"
description = "Solvers for Satelite Image Mozaic Selection problem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily==1.6.2",
    "dataclasses-json==0.6.7",
    "filelock==3.16.1",
    "geojson==3.1.0",
    "geopandas==0.14.4",
    "gurobipy==12.0.0",
    "numpy==2.1.3",
    "ortools==9.11.4210",
    "pymoo==0.6.1.3",
    "shapely==2.0.6",
    "up42-py==2.1.0",
    "minizinc[dzn]==0.9.0",
]

[project.scripts]
sims_solvers = "sims_solvers.main:main"

[tool.pdm.build]
source-includes = ["sims_solvers/"]